--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8:2.1.2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-config:2.1.2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
